@@ -5,7 +5,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.jetbrains.annotations.Nullable;
 import org.springframework.stereotype.Component;
-import uk.gov.hmcts.reform.civil.callback.CallbackParams;
 import uk.gov.hmcts.reform.civil.enums.AllocatedTrack;
 import uk.gov.hmcts.reform.civil.enums.CaseCategory;
 import uk.gov.hmcts.reform.civil.enums.DJPaymentTypeSelection;
@@ -15,6 +14,7 @@ import uk.gov.hmcts.reform.civil.enums.RepaymentFrequencyDJ;
 import uk.gov.hmcts.reform.civil.enums.RespondentResponseType;
 import uk.gov.hmcts.reform.civil.enums.RespondentResponseTypeSpec;
 import uk.gov.hmcts.reform.civil.enums.YesOrNo;
+import uk.gov.hmcts.reform.civil.helpers.judgmentsonline.JudgmentsOnlineHelper;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.model.ClaimProceedsInCaseman;
 import uk.gov.hmcts.reform.civil.model.ClaimProceedsInCasemanLR;
@@ -129,6 +129,10 @@ public class EventHistoryMapper {
     public static final String RPA_IN_MEDIATION = "IN MEDIATION";
 
     public EventHistory buildEvents(CaseData caseData) {
+        return buildEvents(caseData, null);
+    }
+
+    public EventHistory buildEvents(CaseData caseData, String authToken) {
         EventHistory.EventHistoryBuilder builder = EventHistory.builder()
             .directionsQuestionnaireFiled(List.of(Event.builder().build()));
 
@@ -193,7 +197,7 @@ public class EventHistoryMapper {
                         buildFullDefenceNotProceed(builder, caseData);
                         break;
                     case FULL_DEFENCE_PROCEED:
-                        buildFullDefenceProceed(builder, caseData);
+                        buildFullDefenceProceed(builder, caseData, authToken);
                         break;
                     case TAKEN_OFFLINE_BY_STAFF:
                         buildTakenOfflineByStaff(builder, caseData);
@@ -349,7 +353,7 @@ public class EventHistoryMapper {
             .eventDetailsText("")
             .eventDetails(EventDetails.builder().miscText("")
                               .amountOfJudgment(amountClaimedWithInterest.setScale(2))
-                              .amountOfCosts(getCostOfJudgment(caseData))
+                              .amountOfCosts(JudgmentsOnlineHelper.getCostOfJudgmentForDJ(caseData))
                               .amountPaidBeforeJudgment((caseData.getPartialPayment() == YesOrNo.YES)
                                                             ? partialPaymentPounds : ZERO)
                               .isJudgmentForthwith((caseData.getPaymentTypeSelection()
@@ -818,16 +822,18 @@ public class EventHistoryMapper {
                          .dateReceived(caseNote.getCreatedOn())
                          .eventDetailsText(left((format(
                              "case note added: %s",
-                             caseNote.getNote().replaceAll("\\s+", " ")
+                             caseNote.getNote() != null
+                                 ? caseNote.getNote().replaceAll("\\s+", " ") : ""
                          )), 250))
                          .eventDetails(EventDetails.builder()
                                            .miscText(left((format(
                                                "case note added: %s",
-                                               caseNote.getNote().replaceAll("\\s+", " ")
+                                               caseNote.getNote() != null
+                                                   ? caseNote.getNote().replaceAll("\\s+", " ") : ""
                                            )), 250))
                                            .build())
                          .build())
-            .collect(Collectors.toList());
+            .toList();
         builder.miscellaneous(events);
     }
 
@@ -1178,7 +1184,7 @@ public class EventHistoryMapper {
         }
     }
 
-    private void buildFullDefenceProceed(EventHistory.EventHistoryBuilder builder, CaseData caseData) {
+    private void buildFullDefenceProceed(EventHistory.EventHistoryBuilder builder, CaseData caseData, String authToken) {
         List<ClaimantResponseDetails> applicantDetails = prepareApplicantsDetails(caseData);
         final List<String> miscEventText = prepMultipartyProceedMiscText(caseData);
 
@@ -1207,7 +1213,7 @@ public class EventHistoryMapper {
         } else {
             String preferredCourtCode = locationRefDataUtil.getPreferredCourtData(
                 caseData,
-                CallbackParams.Params.BEARER_TOKEN.toString(), true
+                authToken, true
             );
 
             List<Event> dqForProceedingApplicants = IntStream.range(0, applicantDetails.size())
@@ -1846,7 +1852,7 @@ public class EventHistoryMapper {
                                     "[2 of 2 - %s] Defendant: %s has acknowledged: %s",
                                     currentTime,
                                     caseData.getRespondent2().getPartyName(),
-                                    caseData.getRespondent2ClaimResponseIntentionType().getLabel()
+                                    evaluateRespondent2IntentionType(caseData)
                                 )
                             )
                         ));
@@ -1890,6 +1896,14 @@ public class EventHistoryMapper {
         }
     }
 
+    public String evaluateRespondent2IntentionType(CaseData caseData) {
+        if (caseData.getRespondent2ClaimResponseIntentionType() != null) {
+            return caseData.getRespondent2ClaimResponseIntentionType().getLabel();
+        }
+        //represented by same solicitor
+        return caseData.getRespondent1ClaimResponseIntentionType().getLabel();
+    }
+
     private Event buildAcknowledgementOfServiceEvent(EventHistory.EventHistoryBuilder builder, CaseData caseData,
                                                      boolean isRespondent1, String eventDetailsText) {
         return Event.builder()
@@ -1903,7 +1917,7 @@ public class EventHistoryMapper {
                               .responseIntention(
                                   isRespondent1
                                       ? caseData.getRespondent1ClaimResponseIntentionType().getLabel()
-                                      : caseData.getRespondent2ClaimResponseIntentionType().getLabel())
+                                      : evaluateRespondent2IntentionType(caseData))
                               .build())
             .eventDetailsText(eventDetailsText)
             .build();
@@ -2280,32 +2294,6 @@ public class EventHistoryMapper {
         }).orElse(null);
     }
 
-    private BigDecimal getCostOfJudgment(CaseData data) {
-
-        if (data.getOutstandingFeeInPounds() != null) {
-            return data.getOutstandingFeeInPounds();
-        }
-
-        String repaymentSummary = data.getRepaymentSummaryObject();
-        BigDecimal fixedCost = null;
-        BigDecimal claimCost = null;
-        if (null != repaymentSummary) {
-            fixedCost = repaymentSummary.contains("Fixed")
-                ? new BigDecimal(repaymentSummary.substring(
-                repaymentSummary.indexOf("Fixed cost amount \n£") + 20,
-                repaymentSummary.indexOf("\n### Claim fee amount ")
-            )) : null;
-            claimCost = new BigDecimal(repaymentSummary.substring(
-                repaymentSummary.indexOf("Claim fee amount \n £") + 20,
-                repaymentSummary.indexOf("\n ## Subtotal")
-            ));
-        }
-
-        return fixedCost != null && claimCost != null ? fixedCost.add(claimCost).setScale(2)
-            : claimCost != null ? claimCost.setScale(2) : ZERO;
-
-    }
-
     private void buildClaimTakenOfflineAfterDJ(EventHistory.EventHistoryBuilder builder,
                                                CaseData caseData) {
         if (caseData.getTakenOfflineDate() != null && caseData.getOrderSDODocumentDJ() != null) {
@@ -2385,7 +2373,7 @@ public class EventHistoryMapper {
                                              List<Event> defenceFiledEvents, List<Event> statesPaidEvents) {
         LocalDateTime respondent1ResponseDate = caseData.getRespondent1ResponseDate();
 
-        if (caseData.hasDefendantPayedTheAmountClaimed()) {
+        if (caseData.hasDefendantPaidTheAmountClaimed()) {
             statesPaidEvents.add(buildDefenceFiledEvent(
                 builder,
                 respondent1ResponseDate,
